--- a/presentations/jsm/jsm_abstract.html
+++ b/presentations/jsm/jsm_abstract.html
@@ -145,16 +145,17 @@ $(document).ready(function () {
 </div>
 <div id="abstract-title" class="section level4">
 <h4>Abstract Title</h4>
-<p>An Assessment of LIME Input Options when Interpreting Random Forest Predictions for Bullet Matching Data (<em>This seems too long and wordy…</em>)</p>
+<p>An Assessment of the Application of LIME to Interpret Random Forest Predictions from Bullet Matching Data</p>
+<p>(<em>This seems too long and wordy…</em>)</p>
 </div>
 <div id="abstract-text-1200-character-limit" class="section level4">
 <h4>Abstract Text (1200 character limit)</h4>
-<p>Random forests are known for their accurate predictive abilities, but they are a part of the family of machine learning models that lack interpretability. Recently, a technique called LIME was developed to provide local interpretations for predictive models. The technique fits a linear regression model to perturbations created from the observed data in a localized region around a prediction of interest and the predicted values associated with the perturbations computed using the complex model. The coefficients from the linear model are used to determine the influential variables. We apply LIME to a random forest fit to a bullet matching dataset using the lime package currently available in R. The LIME algorithm requires several input options that affect the way that the perturbations are created and how the model is interpreted. We assess the current options available in the package and propose some new methods.</p>
-<p>(<em>What are your thoughts aobut this? Is the focus of this abstract apporpriate for the talk?</em>)</p>
+<p>Random forests are known for their accurate predictive abilities, but they are a part of the family of machine learning models that lack interpretability. Recently, a technique called LIME was developed to provide local interpretations for predictive models. The technique fits a linear regression model to perturbations created from the observed data in a localized region around a prediction of interest and the predicted values associated with the perturbations computed using the complex model. The coefficients from the linear model are used to determine the influential variables. We apply LIME to a random forest fit to a forensics bullet matching dataset using the lime package currently available in R. The LIME algorithm requires several input options that affect the way that the perturbations are created and how the model is interpreted. We assess the current options available in the package and propose some new methods.</p>
+<p>(<em>What are your thoughts about this? Is the focus of this abstract apporpriate for the talk?</em>)</p>
 </div>
 <div id="abstract-keywords" class="section level4">
 <h4>Abstract Keywords</h4>
-<p>Key Words: random forest, LIME, interpretability</p>
+<p>random forest, LIME, interpretability</p>
 <p>(<em>Are these okay?</em>)</p>
 </div>
 <div id="presenting-author-and-co-author-contact-information.-please-note-there-can-only-be-one-presenting-author.-accurate-and-unique-email-addresses-are-required-for-all-authors." class="section level4">
