--- a/presentations/jsm/jsm_abstract.html
+++ b/presentations/jsm/jsm_abstract.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Katherine Goode" />
 
-<meta name="date" content="2019-01-30" />
+<meta name="date" content="2019-01-31" />
 
 <title>JSM Abstract</title>
 
@@ -124,7 +124,7 @@ $(document).ready(function () {
 
 <h1 class="title toc-ignore">JSM Abstract</h1>
 <h4 class="author"><em>Katherine Goode</em></h4>
-<h4 class="date"><em>January 30, 2019</em></h4>
+<h4 class="date"><em>January 31, 2019</em></h4>
 
 </div>
 
@@ -137,31 +137,31 @@ $(document).ready(function () {
 </div>
 <div id="session-subtype-paper-speed-poster-a.m.-or-p.m.-roundtable" class="section level4">
 <h4>Session Subtype (Paper, Speed, Poster, A.M. or P.M. Roundtable)</h4>
-<p>Paper, speed, or poster (<em>Which should I list as the perferred session?</em>)</p>
+<p>Paper</p>
 </div>
 <div id="primary-sponsor-asa-committee-asa-section-jsm-sponsoring-society.-a-pull-down-screen-with-a-pre-approved-list-is-provided." class="section level4">
 <h4>Primary Sponsor (ASA Committee, ASA Section, JSM Sponsoring Society). A pull-down screen with a pre-approved list is provided.</h4>
-<p>(<em>I am not sure what to list for this?</em>)</p>
+<ul>
+<li>the section on statistical learning and data science</li>
+<li>maybe the section on statistical computing</li>
+</ul>
 </div>
 <div id="abstract-title" class="section level4">
 <h4>Abstract Title</h4>
 <p>An Assessment of the Application of LIME to Interpret Random Forest Predictions from Bullet Matching Data</p>
-<p>(<em>This seems too long and wordy…</em>)</p>
 </div>
 <div id="abstract-text-1200-character-limit" class="section level4">
 <h4>Abstract Text (1200 character limit)</h4>
-<p>Random forests are known for their accurate predictive abilities, but they are a part of the family of machine learning models that lack interpretability. Recently, a technique called LIME was developed to provide local interpretations for predictive models. The technique fits a linear regression model to perturbations created from the observed data in a localized region around a prediction of interest and the predicted values associated with the perturbations computed using the complex model. The coefficients from the linear model are used to determine the influential variables. We apply LIME to a random forest fit to a forensics bullet matching dataset using the lime package currently available in R. The LIME algorithm requires several input options that affect the way that the perturbations are created and how the model is interpreted. We assess the current options available in the package and propose some new methods.</p>
-<p>(<em>What are your thoughts about this? Is the focus of this abstract apporpriate for the talk?</em>)</p>
+<p>Random forests are known for their accurate predictive abilities, but they are a part of the family of machine learning models that lack interpretability. Recently, a technique called LIME was developed to provide local interpretations for predictive models. The technique fits a linear regression model to perturbations created from the observed data in a localized region around a prediction of interest. The predicted values associated with the perturbations computed using the complex model are used as the response variable in the regression. The coefficients from the linear model are used to determine the influential variables. We apply LIME to a random forest fit to a forensics bullet matching dataset using the lime package currently available in R. The LIME algorithm requires several input options that affect the way that the perturbations are created and how the model is interpreted. We assess the current options available in the package and propose some improvements.</p>
 </div>
 <div id="abstract-keywords" class="section level4">
 <h4>Abstract Keywords</h4>
-<p>random forest, LIME, interpretability</p>
-<p>(<em>Are these okay?</em>)</p>
+<p>random forest, LIME, black box model, interpretability</p>
 </div>
 <div id="presenting-author-and-co-author-contact-information.-please-note-there-can-only-be-one-presenting-author.-accurate-and-unique-email-addresses-are-required-for-all-authors." class="section level4">
 <h4>Presenting author and co-author contact information. Please note, there can only be one presenting author. Accurate and unique email addresses are required for all authors.</h4>
 <p>Presenting author: Katherine Goode <a href="mailto:kgoode@iastate.edu">kgoode@iastate.edu</a></p>
-<p>Co-author: Heike Hoffman <a href="mailto:hofmann@iastate.edu">hofmann@iastate.edu</a></p>
+<p>Co-author: Heike Hofmann <a href="mailto:hofmann@iastate.edu">hofmann@iastate.edu</a></p>
 </div>
 <div id="note" class="section level4">
 <h4>Note:</h4>
@@ -169,6 +169,19 @@ $(document).ready(function () {
 <li>If the abstract can be considered for alternate session subtypes. The program committee will not have space for all paper abstracts received. Acceptance is more likely if the presentation can be made in different session formats.</li>
 <li>Information on abstract submission from: <a href="http://ww2.amstat.org/meetings/jsm/2019/submissions.cfm" class="uri">http://ww2.amstat.org/meetings/jsm/2019/submissions.cfm</a></li>
 </ul>
+</div>
+<div id="abstract-info" class="section level4">
+<h4>Abstract Info</h4>
+<p>password to edit abstract: limebullet</p>
+<p>abstract number: 304552</p>
+</div>
+<div id="revisions" class="section level4">
+<h4>Revisions</h4>
+<p>You may revise your abstract text, title, and keywords or add coauthors from December 3, 2018, through February 4, 2019, and April 1 through April 18, 2019.</p>
+</div>
+<div id="proof-of-progress" class="section level4">
+<h4>Proof of Progress</h4>
+<p>All presenters must send proof of a paper in progress to the appropriate JSM session chair by May 17, 2019. Proof of a paper in progress can be a draft manuscript, detailed outline, PowerPoint slides, etc. If you do not send the required proof, your paper may be deleted from the program and become ineligible for publication in the JSM Proceedings. This requirement applies to all contributed and topic-contributed speakers and invited sessions with discussants.</p>
 </div>
 </div>
 
