--- a/journals/05-applying_lime.html
+++ b/journals/05-applying_lime.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Katherine Goode" />
 
-<meta name="date" content="2019-02-11" />
+<meta name="date" content="2019-02-22" />
 
 <title>05-applying_lime</title>
 
@@ -94,9 +94,6 @@ img {
 }
 .tabbed-pane {
   padding-top: 12px;
-}
-.html-widget {
-  margin-bottom: 20px;
 }
 button.code-folding-btn:focus {
   outline: none;
@@ -222,7 +219,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">05-applying_lime</h1>
 <h4 class="author"><em>Katherine Goode</em></h4>
-<h4 class="date"><em>February 11, 2019</em></h4>
+<h4 class="date"><em>February 22, 2019</em></h4>
 
 </div>
 
@@ -231,7 +228,15 @@ div.tocify {
 <h1>Overview</h1>
 <p>This journal the applications of lime to the bullet data.</p>
 <pre class="r"><code># Load libraries
+library(bulletr)
+library(lime)
+library(furrr)
+library(future)
+library(randomForest)
 library(tidyverse)
+
+# Load rtrees into session
+data(&quot;rtrees&quot;)
 
 # Source functions
 source(&quot;../code/helper_functions.R&quot;)</code></pre>
@@ -239,14 +244,14 @@ source(&quot;../code/helper_functions.R&quot;)</code></pre>
 <div id="data" class="section level1">
 <h1>Data</h1>
 <p>The training and testing datasets are loaded in below.</p>
-<pre class="r"><code># Read in the Hamby 224 test data
-hamby224_test &lt;- read.csv(&quot;../data/hamby224_test.csv&quot;) 
+<pre class="r"><code># Load in the training data (Hamby Data 173 and 252)
+hamby173and252_train &lt;- read.csv(&quot;../data/hamby173and252_train.csv&quot;)
 
-# Read in the test_explain data
-hamby224_test_explain &lt;- readRDS(&quot;../data/hamby224_test_explain.rds&quot;)</code></pre>
+# Load in the testing data (Hamby Data 224 Sets 1 and 11)
+hamby224_test &lt;- read.csv(&quot;../data/hamby224_test.csv&quot;)</code></pre>
 <p>A vector containing the features used in the random forest <code>rtrees</code> is created below.</p>
 <pre class="r"><code># Obtain features used when fitting the rtrees random forest
-rf_features &lt;- rownames(bulletr::rtrees$importance)</code></pre>
+rf_features &lt;- rownames(rtrees$importance)</code></pre>
 </div>
 <div id="one-implementation" class="section level1">
 <h1>One Implementation</h1>
@@ -372,10 +377,10 @@ if(!file.exists(&quot;../data/hamby224_test_explain.rds&quot;)) {
                             case_info = hamby224_lime_inputs)) %&gt;%
     mutate(feature = factor(feature),
            nbins = factor(nbins),
-           feature_number = readr::parse_number(feature_desc),
+           feature_number = readr::parse_number(as.character(feature_desc)),
            strictly_less = FALSE) %&gt;%
     arrange(nbins)
-  
+
   # Finish creating the strictly less than variable
   hamby224_test_explain$strictly_less[grep(&quot;&lt; &quot;, hamby224_test_explain$feature_desc)] &lt;- TRUE
   
@@ -588,61 +593,75 @@ write.csv(hamby224_sensitivity_joined, &quot;../data/hamby224_sensitivity_joined
 <div id="session-info" class="section level1">
 <h1>Session Info</h1>
 <pre class="r"><code>sessionInfo()</code></pre>
-<pre><code>## R version 3.5.2 (2018-12-20)
-## Platform: x86_64-apple-darwin15.6.0 (64-bit)
-## Running under: macOS Mojave 10.14.3
+<pre><code>## R version 3.4.4 (2018-03-15)
+## Platform: x86_64-pc-linux-gnu (64-bit)
+## Running under: Ubuntu 16.04.5 LTS
 ## 
 ## Matrix products: default
-## BLAS: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRblas.0.dylib
-## LAPACK: /Library/Frameworks/R.framework/Versions/3.5/Resources/lib/libRlapack.dylib
+## BLAS: /usr/lib/openblas-base/libblas.so.3
+## LAPACK: /usr/lib/libopenblasp-r0.2.18.so
 ## 
 ## locale:
-## [1] en_US.UTF-8/en_US.UTF-8/en_US.UTF-8/C/en_US.UTF-8/en_US.UTF-8
+##  [1] LC_CTYPE=en_US.UTF-8       LC_NUMERIC=C              
+##  [3] LC_TIME=en_US.UTF-8        LC_COLLATE=en_US.UTF-8    
+##  [5] LC_MONETARY=en_US.UTF-8    LC_MESSAGES=en_US.UTF-8   
+##  [7] LC_PAPER=en_US.UTF-8       LC_NAME=C                 
+##  [9] LC_ADDRESS=C               LC_TELEPHONE=C            
+## [11] LC_MEASUREMENT=en_US.UTF-8 LC_IDENTIFICATION=C       
 ## 
 ## attached base packages:
 ## [1] stats     graphics  grDevices utils     datasets  methods   base     
 ## 
 ## other attached packages:
-##  [1] bindrcpp_0.2.2   assertthat_0.2.0 tree_1.0-39      forcats_0.3.0   
-##  [5] stringr_1.3.1    dplyr_0.7.8      purrr_0.2.5      readr_1.1.1     
-##  [9] tidyr_0.8.2      tibble_1.4.2     ggplot2_3.1.0    tidyverse_1.2.1 
+##  [1] assertthat_0.2.0    tree_1.0-39         forcats_0.2.0      
+##  [4] stringr_1.3.1       dplyr_0.8.0.1       purrr_0.3.0        
+##  [7] readr_1.3.1         tidyr_0.8.2         tibble_2.0.1       
+## [10] ggplot2_3.1.0       tidyverse_1.2.1     randomForest_4.6-12
+## [13] furrr_0.1.0         future_1.11.1.1     lime_0.4.1         
+## [16] bulletr_0.1.0.9003 
 ## 
 ## loaded via a namespace (and not attached):
-##  [1] rgl_0.99.16             Rcpp_1.0.0             
-##  [3] lubridate_1.7.4         lattice_0.20-38        
-##  [5] zoo_1.8-3               rprojroot_1.3-2        
-##  [7] digest_0.6.18           mime_0.6               
-##  [9] R6_2.3.0                cellranger_1.1.0       
-## [11] plyr_1.8.4              backports_1.1.2        
-## [13] evaluate_0.11           httr_1.4.0             
-## [15] pillar_1.3.0            rlang_0.3.1            
-## [17] lazyeval_0.2.1          curl_3.2               
-## [19] readxl_1.1.0            miniUI_0.1.1.1         
-## [21] rstudioapi_0.7          data.table_1.11.8      
-## [23] TTR_0.23-3              rmarkdown_1.10         
-## [25] webshot_0.5.0           x3ptools_0.0.1         
-## [27] htmlwidgets_1.3         munsell_0.5.0          
-## [29] shiny_1.2.0             broom_0.5.0            
-## [31] httpuv_1.4.5.1          compiler_3.5.2         
-## [33] modelr_0.1.2            pkgconfig_2.0.2        
-## [35] htmltools_0.3.6         tidyselect_0.2.5       
-## [37] viridisLite_0.3.0       later_0.7.5            
-## [39] crayon_1.3.4            withr_2.1.2            
-## [41] grid_3.5.2              xtable_1.8-3           
-## [43] nlme_3.1-137            jsonlite_1.6           
-## [45] gtable_0.2.0            magrittr_1.5           
-## [47] scales_1.0.0            cli_1.0.0              
-## [49] stringi_1.2.4           reshape2_1.4.3         
-## [51] promises_1.0.1          robustbase_0.93-2      
-## [53] xml2_1.2.0              bulletr_0.1.0.9003     
-## [55] smoother_1.1            xts_0.11-0             
-## [57] tools_3.5.2             manipulateWidget_0.10.0
-## [59] glue_1.3.0              DEoptimR_1.0-8         
-## [61] hms_0.4.2               crosstalk_1.0.0        
-## [63] yaml_2.2.0              colorspace_1.3-2       
-## [65] rvest_0.3.2             plotly_4.8.0.9000      
-## [67] knitr_1.20              bindr_0.1.1            
-## [69] haven_1.1.2</code></pre>
+##  [1] nlme_3.1-137            xts_0.10-1             
+##  [3] lubridate_1.7.1         webshot_0.5.1          
+##  [5] httr_1.4.0              rprojroot_1.3-2        
+##  [7] tools_3.4.4             backports_1.1.2        
+##  [9] R6_2.4.0                lazyeval_0.2.1         
+## [11] colorspace_1.4-0        manipulateWidget_0.10.0
+## [13] withr_2.1.2             tidyselect_0.2.5       
+## [15] smoother_1.1            mnormt_1.5-5           
+## [17] curl_3.3                compiler_3.4.4         
+## [19] cli_1.0.1               glmnet_2.0-16          
+## [21] rvest_0.3.2             xml2_1.2.0             
+## [23] plotly_4.8.0            scales_1.0.0           
+## [25] DEoptimR_1.0-8          psych_1.7.8            
+## [27] robustbase_0.93-3       digest_0.6.18          
+## [29] foreign_0.8-70          rmarkdown_1.8          
+## [31] pkgconfig_2.0.2         htmltools_0.3.6        
+## [33] htmlwidgets_1.3         rlang_0.3.1            
+## [35] readxl_1.0.0            TTR_0.23-2             
+## [37] rstudioapi_0.7          shiny_1.2.0            
+## [39] zoo_1.8-4               jsonlite_1.6           
+## [41] crosstalk_1.0.0         magrittr_1.5           
+## [43] Matrix_1.2-14           Rcpp_1.0.0             
+## [45] munsell_0.5.0           stringi_1.3.1          
+## [47] yaml_2.2.0              plyr_1.8.4             
+## [49] grid_3.4.4              parallel_3.4.4         
+## [51] listenv_0.7.0           promises_1.0.1         
+## [53] crayon_1.3.4            miniUI_0.1.1.1         
+## [55] lattice_0.20-38         haven_1.1.0            
+## [57] hms_0.4.2               knitr_1.21             
+## [59] pillar_1.3.1            reshape2_1.4.3         
+## [61] codetools_0.2-15        glue_1.3.0             
+## [63] evaluate_0.12           data.table_1.12.0      
+## [65] modelr_0.1.1            httpuv_1.4.5           
+## [67] foreach_1.4.4           cellranger_1.1.0       
+## [69] gtable_0.2.0            xfun_0.4               
+## [71] gower_0.1.2             mime_0.6               
+## [73] xtable_1.8-2            broom_0.4.3            
+## [75] x3ptools_0.0.1.9000     later_0.7.5            
+## [77] viridisLite_0.3.0       shinythemes_1.1.1      
+## [79] iterators_1.0.10        rgl_0.99.16            
+## [81] globals_0.12.4</code></pre>
 </div>
 
 
