--- a/journals/00-objectives_and_ideas/00-objectives_and_ideas.html
+++ b/journals/00-objectives_and_ideas/00-objectives_and_ideas.html
@@ -11,7 +11,7 @@
 
 <meta name="author" content="Katherine Goode" />
 
-<meta name="date" content="2019-02-22" />
+<meta name="date" content="2019-02-26" />
 
 <title>00-objectives_and_ideas</title>
 
@@ -95,8 +95,14 @@ img {
 .tabbed-pane {
   padding-top: 12px;
 }
+.html-widget {
+  margin-bottom: 20px;
+}
 button.code-folding-btn:focus {
   outline: none;
+}
+summary {
+  display: list-item;
 }
 </style>
 
@@ -105,14 +111,74 @@ button.code-folding-btn:focus {
 <div class="container-fluid main-container">
 
 <!-- tabsets -->
+
+<style type="text/css">
+.tabset-dropdown > .nav-tabs {
+  display: inline-table;
+  max-height: 500px;
+  min-height: 44px;
+  overflow-y: auto;
+  background: white;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs > li.active:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li.active:before {
+  content: "";
+  border: none;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open:before {
+  content: "";
+  font-family: 'Glyphicons Halflings';
+  display: inline-block;
+  padding: 10px;
+  border-right: 1px solid #ddd;
+}
+
+.tabset-dropdown > .nav-tabs > li.active {
+  display: block;
+}
+
+.tabset-dropdown > .nav-tabs > li > a,
+.tabset-dropdown > .nav-tabs > li > a:focus,
+.tabset-dropdown > .nav-tabs > li > a:hover {
+  border: none;
+  display: inline-block;
+  border-radius: 4px;
+}
+
+.tabset-dropdown > .nav-tabs.nav-tabs-open > li {
+  display: block;
+  float: none;
+}
+
+.tabset-dropdown > .nav-tabs > li {
+  display: none;
+}
+</style>
+
 <script>
 $(document).ready(function () {
   window.buildTabsets("TOC");
 });
+
+$(document).ready(function () {
+  $('.tabset-dropdown > .nav-tabs > li').click(function () {
+    $(this).parent().toggleClass('nav-tabs-open')
+  });
+});
 </script>
 
 <!-- code folding -->
-
 
 
 
@@ -219,7 +285,7 @@ div.tocify {
 
 <h1 class="title toc-ignore">00-objectives_and_ideas</h1>
 <h4 class="author"><em>Katherine Goode</em></h4>
-<h4 class="date"><em>February 22, 2019</em></h4>
+<h4 class="date"><em>February 26, 2019</em></h4>
 
 </div>
 
@@ -254,6 +320,13 @@ div.tocify {
 <h1>Ideas to Try</h1>
 <ul>
 <li>Could try fitting a regression with interactions and see if LIME does a good job of explaining a model that is already interpretable.</li>
+<li>Run a simulation to understand if LIME is working
+<ul>
+<li>could implement a couple of local linear dependencies</li>
+<li>piece this together</li>
+<li>could include interactions in the model</li>
+<li>does lime find the local models?</li>
+</ul></li>
 </ul>
 </div>
 <div id="general-thoughts-about-lime" class="section level1">
