--- a/presentations/graphics group/applying_lime_to_a_random_forest_and_the_problems_that_ensue.html
+++ b/presentations/graphics group/applying_lime_to_a_random_forest_and_the_problems_that_ensue.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>My Story of Applying LIME to a Random Forest Model and the Problems that Ensued</title>
+    <title> Applying LIME to a Random Forest Model</title>
     <meta charset="utf-8">
     <meta name="author" content="Katherine Goode" />
     <link href="libs/remark-css/default.css" rel="stylesheet" />
@@ -12,23 +12,163 @@
     <textarea id="source">
 class: center, middle, inverse, title-slide
 
-# My Story of Applying LIME to a Random Forest Model and the Problems that Ensued
+# <a href="https://en.wikipedia.org/wiki/Clumber_Park"><img src="images/lindens.jpg" /></a> Applying LIME to a Random Forest Model
 ### Katherine Goode
-### March 1, 2019
+### ISU Graphics Group
+<div style="margin-bottom:100px;">
+<p>March 1, 2019</p>
 
 ---
 
 
 
 
-## Overview
+# Overview
 
-1. Overview of LIME
-2. Hamby bullet matching data
+.pull-left[
+### Goals for the talk
+- Explain the LIME algorithm
+- Present an application of LIME
+- Highlight problems with this application
+
+### The plan
+
+1. Explanation of LIME 
+2. Hamby bullet data
 3. Applying LIME to the bullet data
 4. Issues with LIME
-5. Attempts at a Solution
-6. Future Work
+5. Attempts at a solution
+6. Future work
+]
+
+.pull-right[
+&lt;br&gt;
+&lt;br&gt;
+&lt;img src="./images/lime_drawing.png" width = 400&gt;
+]
+
+---
+
+class: inverse, center, middle
+
+# What is &lt;span style="color:lime"&gt;LIME&lt;/span&gt;?
+
+---
+
+# Motivation for LIME
+
+&lt;br&gt;
+
+[![](./images/blackbox.png)](https://en.wikipedia.org/wiki/Black_box)
+
+### Black Box Prediction Models
+
+- Offer great predictive ability 
+- Loss of interpretability
+- Difficult to assess trustworthiness
+
+### Enter LIME
+
+- **L**ocal **I**nterpretable **M**odel-Agnostic **E**xplanations
+- Developed by computer scientists ([Ribeiro, Singh, and Guestrin](https://arxiv.org/pdf/1602.04938.pdf))
+- Designed to assess if a black box predictive model is trustworthy
+- Produces "explanations" for individual predictions
+
+---
+
+# Meaning of LIME
+
+.pull-left[
+### &lt;span style="color:lime"&gt;L&lt;/span&gt;ocal
+
+- Focuses on behavior of a complex model at a local level
+
+### &lt;span style="color:lime"&gt;I&lt;/span&gt;nterpretable
+
+- Produces easily interpretable "explanations"
+
+### &lt;span style="color:lime"&gt;M&lt;/span&gt;odel-Agnostic
+
+- Works with any black-box predictor
+
+### &lt;span style="color:lime"&gt;E&lt;/span&gt;xplanations
+
+- Provides insight into individual predictions
+]
+
+.pull-right[
+&lt;br&gt;
+&lt;br&gt;
+.center[&lt;img src="./images/local.png" width=300&gt;]
+.center[&lt;font size="4"&gt;Figure 3 in Ribeiro, Singh, and Guestrin (2016)&lt;/font&gt;]
+&lt;br&gt;
+&lt;br&gt;
+.center[&lt;img src="./images/image_explanation.png" width=500&gt;]
+.center[&lt;font size="4"&gt;Figure 4 in Ribeiro, Singh, and Guestrin (2016)&lt;/font&gt;]
+]
+
+
+---
+
+# An Example &lt;font size="3"&gt;(from Ribeiro, Singh, and Guestrin (2016))&lt;/font&gt;
+
+.pull-left[
+### 1. Black Box Model 
+- Model predicts whether a patient has the flu
+- Apply the model to a new patient
+- Predicts that the patient has the flu
+- Can this prediction be trusted?
+]
+
+.pull-right[
+### 2. LIME
+- Apply LIME to *this* case
+- LIME returns the most important variables in *this* prediction
+- Colors indicate
+    + &lt;span style="color:green"&gt;green&lt;/span&gt;: evidence supporting the flu
+    + &lt;span style="color:red"&gt;red&lt;/span&gt;: evidence against the flu
+- Can this prediction be trusted?
+]
+
+.center[&lt;img src="./images/example.png" width=700&gt;]
+.center[&lt;font size="4"&gt;Figure 1 in Ribeiro, Singh, and Guestrin (2016)&lt;/font&gt;]
+ 
+---
+
+# Using LIME
+
+### Implementations of LIME
+
+- Developers created a Python package
+- Thomas Pedersen created an R package called lime
+
+![](./images/lime.png)
+
+---
+
+class: inverse, center, middle
+
+# Hamby Bullet Matching Data
+
+---
+class: inverse, center, middle
+
+# Applying LIME to the bullet data
+
+---
+class: inverse, center, middle
+
+# Issues with LIME
+
+---
+class: inverse, center, middle
+
+# Attempts at a Solution
+
+---
+class: inverse, center, middle
+
+# Future Work
     </textarea>
 <script src="https://remarkjs.com/downloads/remark-latest.min.js"></script>
 <script>var slideshow = remark.create({
